--- a/styles/main.css
+++ b/styles/main.css
@@ -117,7 +117,7 @@ html {
 	}
 }
 
-@media screen and (min-width: 320px) and (max-width: 739px) {
+@media screen and (max-width: 739px) {
 	body {
 		display: flex;
 		flex-direction: column;
